Fix images on mobile writings

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -77,7 +77,7 @@
 	}
 
 	.prose img {
-		@apply mx-auto my-12 max-w-screen-md rounded-lg;
+		@apply mx-auto my-12 w-full max-w-screen-md rounded-lg;
 	}
 
 	.prose p:has(> img:only-child) {
